2011-04-20  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/48288
	* config/pa/predicates.md (ior_operand): Delete predicate.
	(cint_ior_operand, reg_or_cint_ior_operand): New predicates.
	* config/pa/pa.md (iordi3): Use reg_or_cint_ior_operand predicate in
	expander.  Use cint_ior_operand in unnamed insn.
	(iorsi3): Likewise.
	* config/pa/pa-protos.h (ior_operand): Delete declarations.

2011-04-20  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/48611
	* tree-eh.c (note_eh_region_may_contain_throw): Don't propagate
	beyond ERT_MUST_NOT_THROW region.

2011-04-20  Eric Botcazou  <ebotcazou@adacore.com>

	Backport from mainline
	2011-04-19  Eric Botcazou  <ebotcazou@adacore.com>

	PR lto/48148
	* gimple.c (gimple_types_compatible_p_1) <ENUMERAL_TYPE>: Do not merge
	the types if they have different enumeration identifiers.

	2011-04-18  Eric Botcazou  <ebotcazou@adacore.com>

	PR lto/48492
	* cfgexpand.c (expand_debug_expr) <VAR_DECL>: Return NULL for a
	DECL_IN_CONSTANT_POOL without RTL.

2011-04-20  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2011-04-19  Bernd Schmidt  <bernds@codesourcery.com>

	PR fortran/47976
	* reload1.c (inc_for_reload): Return void. All callers changed.
	(emit_input_reload_insns): Don't try to delete previous output
	reloads to a register, or record spill_reg_store for autoincs.

2011-04-19  Jakub Jelinek  <jakub@redhat.com>

	PR target/48678
	* config/i386/i386.md (movstrict<mode>): FAIL if operands[0]
	is a SUBREG with non-MODE_INT mode inside of it.

2011-04-18  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/48661
	* gimple-fold.c (gimple_get_virt_method_for_binfo): Return NULL
	if TREE_TYPE (v) is non-NULL.

	* gimple-fold.c (gimple_get_virt_method_for_binfo): Renamed from
	gimple_get_virt_mehtod_for_binfo.
	* gimple.h (gimple_get_virt_method_for_binfo): Likewise.
	* ipa-cp.c (ipcp_process_devirtualization_opportunities): Adjust
	callers.